# dots-ocr-engine

./: .env.example  .gitignore  README.md  config.yaml  evals.py  pyproject.toml
utils/: document_evaluator.py
